feat: add index page and css styles

--- a/index.html
+++ b/index.html
@@ -1,10 +1,361 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+  <meta charset="utf-8">
+  <title>CV Stanislau Haurylchyk</title>
+  <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-
+<div class="main-content">
+  <h1>STANISLAU HAURYLCHYK</h1>
+  <h2>PERSONAL DATA</h2>
+  <div>
+    <img class="cv-photo" src="img/cv-photo.jpg" alt="Stanislau Haurylchyk photo" width="218" height="218">
+    <table>
+      <thead>
+      <tr>
+        <th>Name:</th>
+        <th>Stanislau Haurylchyk</th>
+      </tr>
+      </thead>
+      <tbody>
+      <tr>
+        <td>Date of Birth:</td>
+        <td>15/03/1986</td>
+      </tr>
+      <tr>
+        <td>Location:</td>
+        <td>Belarus, Minsk</td>
+      </tr>
+      <tr>
+        <td>Mobile:</td>
+        <td>+375 (29) 368-21-58</td>
+      </tr>
+      <tr>
+        <td>E-mail:</td>
+        <td>stanislau.haurylchyk@gmail.com</td>
+      </tr>
+      <tr>
+        <td>Skype:</td>
+        <td>gavrillavigne</td>
+      </tr>
+      <tr>
+        <td>LinkedIn:</td>
+        <td>www.linkedin.com/in/shaurylchyk</td>
+      </tr>
+      </tbody>
+    </table>
+  </div>
+  <h2>OBJECTIVE</h2>
+  <blockquote>
+    <p>Desired Position: Full Stack Web Developer</p>
+  </blockquote>
+  <h2>SUMMARY OF QUALIFICATION</h2>
+  <blockquote>
+    <p>Quite seriously I began to study PHP and related technologies about two years ago. Before that time, I studied
+      theory, watched video courses, solved simple tasks. Soon I realized that without serious practice I would spent
+      very much time on my training. So I decided to write my first project (you can see the link to the project
+      repository in the CV below).
+      I wrote the project without the use of CMS and frameworks to understand Web technologies better. But in my project
+      I trying to use OOP, MVC pattern and database management system MySQL. After the completion of the current project
+      I’m planning to write a project using the framework (probably it will be Yii2).
+      I also have commercial development experience. About six months I work as a Junior PHP Developer. I develop and
+      refinement of existing functionality for the company’s CRM system using the Yii2 framework.</p>
+  </blockquote>
+  <h2>TECHNICAL SKILLS</h2>
+  <ul>
+    <li>LAMP, LEMP, Linux, Vagrant, PuPHPet, Composer, Docker</li>
+    <li>PHP, MVC, OOP, REST API, YII2</li>
+    <li>MySQL, SQL</li>
+    <li>HTML, CSS</li>
+    <li>HTTP</li>
+    <li>Git Bash, Bitbucket</li>
+  </ul>
+  <h2>RELEVANT EXPERIENCE</h2>
+  <ul>
+    <li>Participation in the company’s projects</li>
+    <li>Teamwork</li>
+    <li>Communication with the users of companies</li>
+    <li>Understanding the internal processes of a big company</li>
+  </ul>
+  <h2>LANGUAGES</h2>
+  <ul>
+    <li>English – Intermediate</li>
+    <li>Russian – Native Speaker</li>
+  </ul>
+  <h2>EDUCATION</h2>
+  <blockquote>
+    <p>2003 – 2008 /Belarusian National Technical University, Power Plant Construction and Engineering Services Faculty /Hydrotechnical Construction (Civil Engineer) /Minsk, Belarus</p>
+  </blockquote>
+  <h2>OTHER INFORMATION ABOUT ME</h2>
+  <blockquote>
+    <p>I am married since 2018 and I have a military ID. I prefer a healthy lifestyle like traveling, biking, camping
+      and so on. I also like playing the guitar. I am free of the bad habits. I always try to find the way from
+      difficult situation by myself.</p>
+  </blockquote>
+  <h2>COURSES AND CERTIFICATES</h2>
+  <table>
+    <thead>
+    <tr>
+      <th>Course name:</th>
+      <th>PHP UP “Advanced PHP programming course”</th>
+    </tr>
+    </thead>
+    <tbody>
+    <tr>
+      <td>Issued:</td>
+      <td>Online video courses https://php-up.com</td>
+    </tr>
+    <tr>
+      <td>Years of study:</td>
+      <td>2018</td>
+    </tr>
+    </tbody>
+  </table>
+  <table>
+    <thead>
+    <tr>
+      <th>Course name:</th>
+      <th>PHP START “Base PHP programming course”</th>
+    </tr>
+    </thead>
+    <tbody>
+    <tr>
+      <td>Issued:</td>
+      <td>Online video courses https://php-start.com</td>
+    </tr>
+    <tr>
+      <td>Years of study:</td>
+      <td>2016</td>
+    </tr>
+    </tbody>
+  </table>
+  <table>
+    <thead>
+    <tr>
+      <th>Course name:</th>
+      <th>“Programming in PHP” (advanced course)</th>
+    </tr>
+    </thead>
+    <tbody>
+    <tr>
+      <td>Issued:</td>
+      <td>Center of Educational Technologies “BelHard”</td>
+    </tr>
+    <tr>
+      <td>Years of study:</td>
+      <td>2015</td>
+    </tr>
+    </tbody>
+  </table>
+  <h2>PROJECTS</h2>
+  <table>
+    <thead>
+    <tr>
+      <th>Type:</th>
+      <th>Site-portfolio for a make-up artist</th>
+    </tr>
+    </thead>
+    <tbody>
+    <tr>
+      <td>Link to the repository:</td>
+      <td>
+        https://bitbucket.org/stanislau-haurylchyk/sk-stylist.com/src/master/
+      </td>
+    </tr>
+    <tr>
+      <td>Current state:</td>
+      <td>The site is under development</td>
+    </tr>
+    </tbody>
+  </table>
+  <h2>PROFESSIOANL EXPERIENCE</h2>
+  <table>
+    <thead>
+    <tr>
+      <th>Company:</th>
+      <th>HOT TELECOM</th>
+    </tr>
+    </thead>
+    <tbody>
+    <tr>
+      <td>Company Web Site:</td>
+      <td>www.hottelecom.by</td>
+    </tr>
+    <tr>
+      <td>Company Location:</td>
+      <td>Belarus, Minsk</td>
+    </tr>
+    <tr>
+      <td>Duration:</td>
+      <td>Current time</td>
+    </tr>
+    <tr>
+      <td>Position:</td>
+      <td>Junior PHP Developer</td>
+    </tr>
+    <tr>
+      <td>Responsibilities:</td>
+      <td>Development and refinement of existing functionality for the company’s CRM
+        system using the Yii2 framework
+      </td>
+    </tr>
+    </tbody>
+  </table>
+  <table>
+    <thead>
+    <tr>
+      <th>Company:</th>
+      <th>Armtek, Group of companies</th>
+    </tr>
+    </thead>
+    <tbody>
+    <tr>
+      <td>Company Web Site:</td>
+      <td>www.armtek.by</td>
+    </tr>
+    <tr>
+      <td>Company Location:</td>
+      <td>Belarus, Minsk</td>
+    </tr>
+    <tr>
+      <td>Duration:</td>
+      <td>12/2014 – 01/2019</td>
+    </tr>
+    <tr>
+      <td>Description of company:</td>
+      <td>Spare parts for foreign-made passenger cars and commercial vehicles
+      </td>
+    </tr>
+    <tr>
+      <td>Position:</td>
+      <td>VoIP System Administrator</td>
+    </tr>
+    <tr>
+      <td>Responsibilities:</td>
+      <td>Administration of the: company’s telephony servers based on Asterisk
+        software; company’s telephony servers based on SAP BCM software; Infracall call center server; GSM-gateways and
+        their configuration; corporate portal server and WebTutor software; several web-servers linux (Centos) and
+        virtual platforms; several company sites. Ensuring the uninterrupted operation of the above resources, as well
+        as performing work on their backup and recovery.
+      </td>
+    </tr>
+    </tbody>
+  </table>
+  <table>
+    <thead>
+    <tr>
+      <th>Company:</th>
+      <th>EPAM Systems Incs</th>
+    </tr>
+    </thead>
+    <tbody>
+    <tr>
+      <td>Company Web Site:</td>
+      <td>www.careers.epam.by</td>
+    </tr>
+    <tr>
+      <td>Company Location:</td>
+      <td>Belarus, Minsk</td>
+    </tr>
+    <tr>
+      <td>Duration:</td>
+      <td>09/2014 – 12/2014</td>
+    </tr>
+    <tr>
+      <td>Description of company:</td>
+      <td>Software development</td>
+    </tr>
+    <tr>
+      <td>Position:</td>
+      <td>IT Engineer</td>
+    </tr>
+    <tr>
+      <td>Responsibilities:</td>
+      <td>Work in the second line of support users. Preparation of new workplaces for
+        internal users and provision of technical support to employees of the company.
+      </td>
+    </tr>
+    </tbody>
+  </table>
+  <table>
+    <thead>
+    <tr>
+      <th>Company:</th>
+      <th>Armtek, Group of companies</th>
+    </tr>
+    </thead>
+    <tbody>
+    <tr>
+      <td>Company Web Site:</td>
+      <td>www.armtek.by</td>
+    </tr>
+    <tr>
+      <td>Company Location:</td>
+      <td>Belarus, Minsk</td>
+    </tr>
+    <tr>
+      <td>Duration:</td>
+      <td>11/2011 – 08/2014</td>
+    </tr>
+    <tr>
+      <td>Description of company:</td>
+      <td>Spare parts for foreign-made passenger cars and commercial vehicles
+      </td>
+    </tr>
+    <tr>
+      <td>Position:</td>
+      <td>Systems Engineer</td>
+    </tr>
+    <tr>
+      <td>Responsibilities:</td>
+      <td>Installation of server and client operating systems; Administration of a
+        small network (9 PCs); Troubleshooting and PC diagnostics; Good knowledge of hardware; Providing information
+        security for users (including eToken, TrueCrypt); Experience with virtualization systems (VMware Workstation
+        (player), VirtualBOX); Basic programming skills; Work in the HelpDesk service (classification and registration
+        of users’ requests, with the following assignment of orders to the second support line); Support of users’
+        workplaces (more than 150); Advising users on working with OS and company’s software.
+      </td>
+    </tr>
+    </tbody>
+  </table>
+  <table>
+    <thead>
+    <tr>
+      <th>Company:</th>
+      <th>City Children’s Infectious Clinical Hospital</th>
+    </tr>
+    </thead>
+    <tbody>
+    <tr>
+      <td>Company Web Site:</td>
+      <td>www.gdikb.by</td>
+    </tr>
+    <tr>
+      <td>Company Location:</td>
+      <td>Belarus, Minsk</td>
+    </tr>
+    <tr>
+      <td>Duration:</td>
+      <td>03/2010 – 09/2010</td>
+    </tr>
+    <tr>
+      <td>Description of company:</td>
+      <td>City Hospital</td>
+    </tr>
+    <tr>
+      <td>Position:</td>
+      <td>Electronic Engineer</td>
+    </tr>
+    <tr>
+      <td>Responsibilities:</td>
+      <td>Perform the functions of the System Administrator Assistant; User support.
+        Preparation of new workplaces for internal users; Troubleshooting; Advising users on working with standard
+        office software. Creating images of the system, etc.
+      </td>
+    </tr>
+    </tbody>
+  </table>
+</div>
 </body>
 </html>
